# NaiSys-DesktopUtils

./: .gitignore  .gitmodules  CMakeLists.txt  NaiSys-DesktopUtils.pro  NaiSys_DesktopUtils_global.h  README.md  consolelogger.cpp  consolelogger.h  databasehandler.cpp  databasehandler.h  databasepool.cpp  databasepool.h  naisyscompression.cpp  naisyscompression.h  naisysdesktoputil.cpp  naisysdesktoputil.h  naisysdocumenthandler.cpp  naisysdocumenthandler.h  naisysjsonobject.cpp  naisysjsonobject.h  naisysprint.cpp  naisysprint.h  naisysxlsx.cpp  naisysxlsx.h  qmlfileio.cpp  qmlfileio.h  streamio.cpp  streamio.h  systemconfig.cpp  systemconfig.h
.github/workflows/: cmake.yml
LibCompression/: CMakeLists.txt
LibConsole/: CMakeLists.txt
LibCore/: CMakeLists.txt
LibFile/: CMakeLists.txt
LibGui/: CMakeLists.txt
LibGui/qml/components/: NaiSysAbstractPopup.qml  NaiSysButton.qml  NaiSysComboBox.qml  NaiSysDialogBox.qml  NaiSysDiv.qml  NaiSysDropDownCard.qml  NaiSysDropDownList.qml  NaiSysInputField.qml  NaiSysInputForm.qml  NaiSysLabel.qml  NaiSysListView.qml  NaiSysLoadingPopup.qml  NaiSysMenuBar.qml  NaiSysMenuButton.qml  NaiSysMenuWidget.qml  NaiSysNavigationPane.qml  NaiSysProfileHeader.qml  NaiSysSelectButton.qml  NaiSysSlideShow.qml  NaiSysTabButton.qml  NaiSysTabWidget.qml  NaiSysTable.qml  NaiSysTableWidget.qml  NaiSysText.qml  NaiSysTextArea.qml  NaiSysTronCard.qml  NaiSysTronWidget.qml  NaiSysWindow.qml
LibGui/qml/layouts/: NaiSysDashLayout.qml  NaiSysFormLayout.qml  NaiSysGridStackLayout.qml  NaiSysNavigationLayout.qml  NaiSysStackLayout.qml  qmldir
LibGui/qml/plugins/menubar/: naisysmenubar.cpp  naisysmenubar.h  plugin.cpp
LibGui/src/: naisysapplicationcontroller.cpp  naisysapplicationcontroller.h  naisysformelement.cpp  naisysformelement.h  naisysformmodel.cpp  naisysformmodel.h  naisysmenu.cpp  naisysmenu.h  naisysmenubutton.cpp  naisysmenubutton.h  naisysmenuitem.cpp  naisysmenuitem.h  naisysmenusection.cpp  naisysmenusection.h  naisysnetworkwrapper.cpp  naisysnetworkwrapper.h  naisysnotificationcontroller.cpp  naisysnotificationcontroller.h  naisysquickwindowexstension.cpp  naisysquickwindowexstension.h  naisyssubmenu.cpp  naisyssubmenu.h  naisystabelement.cpp  naisystabelement.h
LibHttp/: CMakeLists.txt
LibJson/: CMakeLists.txt
LibNetwork/: CMakeLists.txt
LibPrint/: CMakeLists.txt
LibPython/: CMakeLists.txt
LibServerLang/: CMakeLists.txt
LibServerLang/Tests/: CMakeLists.txt  test1.nsl  test10.nsl  test11.nsl  test12.nsl  test13.nsl  test14.nsl  test15.defs.nsl  test15.nsl  test16.nsl  test2.nsl  test3.nsl  test4.nsl  test5.nsl  test6.nsl  test7.nsl  test8.nsl  test9.nsl  tst_generaltests.cpp
LibSettings/: CMakeLists.txt  naisyssettings.cpp  naisyssettings.h
LibSql/: CMakeLists.txt
LibXlsx/: CMakeLists.txt
LibXlsx/SimpleXlsx/: CMakeLists.txt
LibXml/: CMakeLists.txt
src/: connectionthread.cpp  connectionthread.h  databasehandler.cpp  databasehandler.h  databasepool.cpp  libpython.cpp  libpython.h  naisyscompression.cpp  naisyscompression.h  naisysdefs.h  naisysdocumenthandler.cpp  naisysdocumenthandler.h  naisyshttpparser.cpp  naisyshttpparser.h  naisyshttprequest.cpp  naisyshttprequest.h  naisyshttpresponse.cpp  naisyshttpresponse.h  naisyshttpserver.cpp  naisyshttpserver.h  naisysindexedmap.cpp  naisysindexedmap.h  naisysmethodhandler.cpp  naisysmethodhandler.h  naisysprint.cpp  naisysprint.h  naisysxlsx.cpp  naisysxlsx.h  networkapi.cpp  networkapi.h  qmlfileio.cpp  servercalls.h  serverlangcore.cpp  serverlangcore.h  serverlangfunctions.h  serverlanglexer.h  serverlangnode.cpp  serverlangnode.h  serverlangparser.cpp  serverlangparser.h  (+11 more)
src/qml/: libgui.qrc
src/qml/components/: NaiSysAbstractView.qml  NaiSysButton.qml  NaiSysComboBox.qml  NaiSysDialogBox.qml  NaiSysImageCard.qml  NaiSysInputField.qml  NaiSysInputForm.qml  NaiSysLabel.qml  NaiSysListView.qml  NaiSysListWidget.qml  NaiSysMenuBar.qml  NaiSysMenuButton.qml  NaiSysMenuWidget.qml  NaiSysNavigationPane.qml  NaiSysSlideShow.qml  NaiSysTabButton.qml  NaiSysTabWidget.qml  NaiSysTable.qml  NaiSysText.qml  NaiSysTextArea.qml  NaiSysTronCard.qml  NaiSysTronWidget.qml  qmldir
src/qml/layouts/: NaiSysDashLayout.qml  NaiSysGridStackLayout.qml  NaiSysNavigationLayout.qml  NaiSysStackLayout.qml
src/qml/plugins/menubar/: menubar.pro
