cmake_minimum_required(VERSION 3.16)

project(NaiSys-DesktopUtils VERSION 0.0.1 LANGUAGES CXX)

add_subdirectory(LibCompression)
add_subdirectory(LibConsole)
add_subdirectory(LibFile)
add_subdirectory(LibJson)
add_subdirectory(LibNetwork)
add_subdirectory(LibPrint)
add_subdirectory(LibSettings)
add_subdirectory(LibSql)
add_subdirectory(LibXlsx)
add_subdirectory(LibXml)
add_subdirectory(LibPython)
add_subdirectory(LibServerLang)
add_subdirectory(LibHttp)
